k8s/project.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pony-express-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pony-express-project
  template:
    metadata:
      labels:
        app: pony-express-project
    spec:
      containers:
        - name: pony-express-project
          image: kyouma337/pony-express-project
          resources:
            limits:
              memory: '1024Mi'
              cpu: '1000m'
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pony-express-project-srv
spec:
  selector:
    app: pony-express-project
  ports:
    - port: 3000
      targetPort: 3000
      name: pony-express-project
      protocol: TCP
